hotfix: fixed collapse text and implemented disabled links

--- a/packages/opc-menu-drawer/src/opc-menu-drawer.scss
+++ b/packages/opc-menu-drawer/src/opc-menu-drawer.scss
@@ -27,6 +27,10 @@ a {
   color: #1e1e1e;
 }
 
+a[aria-disabled='true'] {
+  pointer-events: none;
+}
+
 img[inverse] {
   transform: rotateZ(180deg);
 }
@@ -150,6 +154,11 @@ img[inverse] {
     font-weight: 500;
     text-transform: capitalize;
     text-align: left;
+  }
+
+  &-link[disabled] {
+    pointer-events: none;
+    opacity: 0.5;
   }
 
   &-menu-btn ::slotted(button:hover),
